--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -45,15 +45,15 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let user">
-        <a [routerLink]="['/user-detail/', user.id]"><mat-icon color="black">visibility</mat-icon></a>
+        <a [routerLink]="['/user-detail/', user.id]"><mat-icon>visibility</mat-icon></a>
         <a [routerLink]="['/edit-user/', user.id]"><mat-icon>edit</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
     <tr mat-row *matRowDef="let row; columns: columnHeaders; let rowIndex = index;"></tr>
   </table>
-  
-  
+
+
   <div *ngIf="userList.length == 0" class="empty-data-message">
     No items match your credentials, please try again.
   </div>
