do export file template

--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.html
@@ -5,6 +5,7 @@
   <a routerLink="/terms"> <i class="fa-solid fa-timeline"></i>Term List</a>
   <a routerLink="/plans"> <i class="fa-solid fa-list-check"></i>Plan List</a>
   <a routerLink="/reports"> <i class="fa-regular fa-file"></i>Report List</a>
+  <a routerLink="/annual-reports"> <i class="fa-regular fa-calendar-alt"></i>Annual Report </a>
   <div id="account">
    
     <i class="fa-regular fa-user"></i>
