--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -40,7 +40,7 @@
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
-              <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
             </ng-container>
             <ng-container matColumnDef="costType">
               <th mat-header-cell *matHeaderCellDef> Cost Type </th>
@@ -56,7 +56,7 @@
             </ng-container>
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
             </ng-container>
             <ng-container matColumnDef="projectName">
               <th mat-header-cell *matHeaderCellDef> Project Name </th>
@@ -72,7 +72,7 @@
             </ng-container>
             <ng-container matColumnDef="notes">
               <th mat-header-cell *matHeaderCellDef> Notes </th>
-              <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+              <td mat-cell *matCellDef="let element"> {{ element.note ? element.note : 'N/A' }} </td>
             </ng-container>
   
             <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
@@ -80,7 +80,7 @@
           </table>
   
           <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
-            [hidden]="dataSource.length==0">
+            [hidden]="dataSource.length==0 || (dataSource.length<pageSize && pageIndex==0)">
           </mat-paginator>
         </div>
         <div>
@@ -90,7 +90,7 @@
                 <span>Back</span>
               </button>
             </a>
-            <button class="submit-button" (click)="onSubmit()">
+            <button class="submit-button" [hidden]="!isPreview" (click)="onSubmit()">
               <span>Submit</span>
             </button>
           </div>
