--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -25,6 +25,7 @@
             </mat-select>
           </mat-form-field>
         </form>
+        <a   style="cursor: pointer; text-decoration: underline;" (click)="exportMutilreport()">File template</a>
         <app-upload class="w-100" (fileSelected)="onFileSelected($event)"></app-upload>
         <div class="buttons">
           <button class="preview-button" (click)="onImport()">
@@ -48,7 +49,7 @@
             </ng-container>
             <ng-container matColumnDef="unitPrice">
               <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.unitPrice | number:'1.0-0'}} </td>
             </ng-container>
             <ng-container matColumnDef="amount">
               <th mat-header-cell *matHeaderCellDef> Amount </th>
@@ -56,7 +57,7 @@
             </ng-container>
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0'}}  </td>
             </ng-container>
             <ng-container matColumnDef="projectName">
               <th mat-header-cell *matHeaderCellDef> Project Name </th>
