--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -2,8 +2,8 @@
 <main>
   <div class="container mb-4">
     <div id="page-title">
-      <h3><b>Users management</b></h3>
-      <h6>User List</h6>
+      <h3><b>User List</b></h3>
+      <h6>Users management</h6>
     </div>
     <a routerLink="/add-user" id="create-button">
       <button><i class="fa-solid fa-plus"></i> Add</button>
