--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
@@ -1,18 +1,21 @@
 <main>
   <div class="row">
-    <div class="col-lg-4 col-md-12">
+    <div class="col-lg-4 left">
       <h1 class="mb-4">Reup Plan</h1>
       <!-- <h5>Step 1/2: Please select a file to import</h5> -->
       <mat-card class="import-card">
         <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
         <div class="buttons">
+          <button class="preview-button">
+            <span>Template</span>
+          </button>
           <button class="preview-button" (click)="onImport()">
             <span>Preview</span>
           </button>
         </div>
       </mat-card>
     </div>
-    <div class="col-md-12 col-lg-8">
+    <div class="col-lg-8 right">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
         <div class="table mat-elevation-z8">
@@ -52,6 +55,10 @@
             <ng-container matColumnDef="notes">
               <th mat-header-cell *matHeaderCellDef> Notes </th>
               <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef> Status </th>
+              <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
   
             <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
