--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
@@ -25,18 +25,9 @@ form input:focus, form select:focus {
 .form-field{
   position: relative;
 }
-
-/* form label {
-  position: absolute;
-  top: 25px;
-  transform: translateY(-50%);
-  left: 30px;
-  color: #575757;
-  user-select: none;
-  pointer-events: none;
-  transition: .25s ease;
-  font: 400 16px/1.5 'Roboto', sans-serif;
-} */
+a.user-list-link {
+  color: black; /* Màu chữ đen */
+}
 
 .form-control:focus + label {
   top: 0px;
