--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
@@ -1,65 +1,78 @@
 <main>
-    <h1>User detail</h1>
+    <h3><b>User List</b></h3>
+    <h6>
+        <a routerLink="/user-list" class="user-list-link">User List</a> > User Detail
+    </h6>
     <div class="doc-info mb-5 card">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
             <div class="row">
-                <div class="col-6">
-                    <h4><label for="user-name" class="form-label">User Name</label></h4>
-                    <input class="form-control" type="text" id="user-name" formControlName="username" />
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
+                    <div class="col-4">
+                        <h4><label for="user-name" class="form-label">User Name</label></h4>
+                        <input class="form-control" type="text" id="user-name" formControlName="username" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="full-name" class="form-label">Full Name</label></h4>
+                        <input class="form-control" type="text" id="fullname" formControlName="fullname" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="dob" class="form-label">Date of birth</label></h4>
+                        <input class="form-control" type="date" id="dob" formControlName="dob" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="email" class="form-label">Email</label></h4>
+                        <input class="form-control" type="text" id="email" formControlName="email" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="address" class="form-label">Address</label></h4>
+                        <input class="form-control" type="text" id="address" formControlName="address" />
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h4><label for="full-name" class="form-label">Full Name</label></h4>
-                    <input class="form-control" type="text" id="fullname" formControlName="fullname" />
+                <div class="col-md-1"></div>
+
+                <div class="col-md-4">
+                    <div class="col-4">
+                        <h4><label for="phonenumber" class="form-label">Phone Number</label></h4>
+                        <input class="form-control" type="text" id="phonenumber" formControlName="phonenumber" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="department" class="form-label">Department</label></h4>
+                        <input class="form-control" type="text" id="department" formControlName="department" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="position" class="form-label">Position</label></h4>
+                        <input class="form-control" type="text" id="position" formControlName="position" />
+                    </div>
+                    <div class="col-4">
+                        <h4><label for="role" class="form-label">Role</label></h4>
+                        <input class="form-control" type="text" id="role" formControlName="role" />
+                    </div>
+
+                    <div class="col-4">
+                        <h4><label for="note" class="form-label">Notes</label></h4>
+                        <input class="form-control" type="text" id="note" formControlName="note" />
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h4><label for="dob" class="form-label">Date of birth</label></h4>
-                    <input class="form-control" type="date" id="dob" formControlName="dob" />
-                </div>
-                <div class="col-6">
-                    <h4><label for="email" class="form-label">Email</label></h4>
-                    <input class="form-control" type="text" id="email" formControlName="email" />
-                </div>
-                <div class="col-6">
-                    <h4><label for="address" class="form-label">Address</label></h4>
-                    <input class="form-control" type="text" id="address" formControlName="address" />
-                </div>
-                <div class="col-6">
-                    <h4><label for="phonenumber" class="form-label">Phone Number</label></h4>
-                    <input class="form-control" type="text" id="phonenumber" formControlName="phonenumber"/>
-                </div>
-                <div class="col-6">
-                    <h4><label for="department" class="form-label">Department</label></h4>
-                    <input class="form-control" type="text" id="department" formControlName="department"/>
-                </div>
-                <div class="col-6">
-                    <h4><label for="position" class="form-label">Position</label></h4>
-                    <input class="form-control" type="text" id="position" formControlName="position"/>
-                </div>
-                <div class="col-6">
-                    <h4><label for="role" class="form-label">Role</label></h4>
-                    <input class="form-control" type="text" id="role" formControlName="role"/>
-                </div>
-             
-                <div class="col-6">
-                    <h4><label for="note" class="form-label">Notes</label></h4>
-                    <input class="form-control" type="text" id="note" formControlName="note"/>
-                </div>
-                
+
+               
+
             </div>
             <div class="choice-container">
                 <!-- Phần tử "Active" -->
                 <div *ngIf="userForm.get('status')?.value === 1" class="status-option text-success">
-                    <strong  style="font-size: 26px;color:#5bdf57"> Active user</strong> 
+                    <strong style="font-size: 26px;color:#5bdf57"> Active user</strong>
                 </div>
                 <!-- Phần tử "Deactive" -->
                 <div *ngIf="userForm.get('status')?.value === 0" class="status-option text-danger">
-                    <strong style="font-size: 26px;color:#ff3939"> InActive user</strong> 
+                    <strong style="font-size: 26px;color:#ff3939"> InActive user</strong>
                 </div>
             </div>
-            
+
             <div class="row mt-4 justify-content-center">
-                <div class="col-12 d-flex justify-content-center" >
-                    <button type="button" class="btn btn-primary btn-lg me-2"  (click)="openUpdateDialog()">Change Status</button>
+                <div class="col-12 d-flex justify-content-center">
+                    <button type="button" class="btn btn-primary btn-lg me-2" (click)="openUpdateDialog()">Change
+                        Status</button>
                     <button type="button" class="btn btn-secondary btn-lg" (click)="cancel()">Cancel</button>
                 </div>
             </div>
