fix: width of account info

--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.css
@@ -64,6 +64,7 @@ a:hover i {
   border-top-left-radius: 50px;
   height: 70px;
   background-color: var(--sidenav-secondary-background);
+  width: 210px;
 }
 
 #account > a > i {
