--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
@@ -36,13 +36,18 @@ button {
 }
 
 #create-button > button {
-  /* color: white; */
+  color: white;
   padding: 10px 20px;
   border-radius: 10px;
+  background-color: var(--button-background);
 }
 
 #create-button i {
-  margin-right: 10px;
+  margin-right: 5px;
+}
+
+#create-button:hover > button {
+  background-color: #553cb9;
 }
 
 .searchBar {
@@ -63,7 +68,6 @@ button {
   left: 24px;
   transform: translateY(-50%);
   cursor: pointer;
-  /* color: #9290c3; */
 }
 
 #filter-button {
@@ -94,24 +98,23 @@ table {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow: hidden !important;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
 }
 
 th {
-  font-weight:900;
+  font-weight: 900;
   background-color: #f2f4f3 !important;
 }
-
 
 ::ng-deep .mat-mdc-paginator {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   overflow: hidden;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
-.emtry-data-message{
+.emtry-data-message {
   text-align: center;
   font-size: large;
   margin-top: 15%;
