--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -13,7 +13,7 @@
       <input type="text" placeholder="Search for Terms" (input)="changeSearchText($event)" />
       <i class="fa-solid fa-search"></i>
     </form>
-    <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"><mat-icon
+    <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable" [ngStyle]="filterStatusEnable ? {'box-shadow': 'inset 0px 5px 17px -6px rgba(0,0,0,0.1)'} : {}"><mat-icon
         class="align-middle">filter_list</mat-icon> Filter </button>
   </div>
   <div *ngIf="filterStatusEnable">
@@ -27,7 +27,7 @@
       </mat-select>
     </mat-form-field>
   </div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="dataSource.length==0">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="dataSource.length==0" [ngStyle]="dataSource.length<=pageSize ? {'border-radius': '20px'} : {}">
     <ng-container matColumnDef="term">
       <th mat-header-cell *matHeaderCellDef>Term</th>
       <td mat-cell *matCellDef="let term">{{term.termName}}</td>
