--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -12,6 +12,7 @@
   --inprogress-status-color: #ffa500;
   --closed-status-background: #ececec;
   --closed-status-color: #808080; 
+  --button-background: #6F4EFF;
 }
 
 body {
