--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.css
@@ -1,12 +1,24 @@
 main {
   position: absolute;
   height: 100vh;
-  width: calc(100vw - 100px);
+  width: calc(100vw - 60px);
   max-height: 100vh;
-  max-width: calc(100vw - 100px);
-  left: 80px;
+  max-width: calc(100vw - 60px);
+  left: 60px;
   padding: 30px;
-  background-color: #070f2b;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#back-link {
+  font-size: 18px;
+}
+
+#back-link:hover {
+  color: var(--button-background);
 }
 
 .container {
@@ -21,115 +33,62 @@ div:has(#page-title) {
   display: flex;
 }
 
+#version:hover {
+  color: #616577;
+}
+
 button {
-  background: #535c91;
+  background: var(--button-background);
   border: none;
 }
 
-
-.abc {
+.top-button {
   position: absolute;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
 }
 
-.abc button {
+.top-button button {
+  width: 110px;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border-radius: 10px;
   margin-right: 10px;
 }
 
-.abc i {
-  margin-right: 10px;
+.top-button button:hover {
+  background-color: #553cb9;
+}
+
+#report-info p {
+  margin: 10px 0;
 }
 
 table {
   width: 100%;
   min-height: auto;
-  background-color: #070f2b;
-  border: 1px solid #9290c3;
+  border: 2px solid var(--white-smoke);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow: hidden !important;
-  box-shadow: 0px -5px 2px -4px #9290c3;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
 }
 
 th {
-  border-bottom: 1px solid #1b1a55;
-  color: white;
-}
-
-td {
-  border-top: 1px solid #535c91;
-  color: #9290c3;
+  font-weight: 900;
+  background-color: #f2f4f3 !important;
 }
 
 ::ng-deep .mat-mdc-paginator {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   overflow: hidden;
-}
-
-::ng-deep .mat-mdc-paginator-outer-container {
-  background-color: #535c91;
-  color: white;
-}
-
-::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
-  height: 50px;
-}
-
-::ng-deep .mat-mdc-text-field-wrapper {
-  margin-top: 20px !important;
-}
-
-::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: #070f2b !important;
-  border: 1px solid #9290c3;
-  border-radius: 10px;
-
-}
-
-::ng-deep .mat-mdc-select-arrow {
-  color: white !important;
-}
-
-::ng-deep .mat-mdc-form-field-infix {
-
-  width: 100px !important;
-}
-
-::ng-deep .mdc-text-field--filled .mdc-floating-label {
-
-  font-size: 14px !important;
-
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .underline {
   text-decoration: underline;
   cursor: pointer;
-}
-
-.report-details {
-  width: 70%;
-  margin: auto;
-  display: flex;
-  border-radius: 5px;
-  border: 1px solid white;
-  margin-bottom: 10px;
-  padding-top: 5px;
-}
-
-.right-item {
-  margin-right: 10%;
-  width: 35%;
-
-}
-
-.left-item {
-  width: 35%;
-  margin-left: 5%;
 }
