--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,43 +1,63 @@
 <main>
-  <div class="container mb-4 margin">
+  <a [routerLink]="['/reports']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
+  <div class="container mb-1">
     <div id="page-title">
-      <h4><b> Monthly Reports</b></h4>
-      <h6>Report Details</h6>
+      <h3><b> {{report.reportName}} </b>
+        <span id="status" class="fs-6 rounded-pill px-2 py-2 d-inline-block align-bottom lh-1 me-2"
+          [ngStyle]="{'background-color': report.status === 0 ? 'var(--new-status-background)' : 'var(--closed-status-background)'}">
+          <i class="fa-solid fa-circle align-middle me-1"
+            [ngStyle]="{'color': report.status === 0 ? 'var(--new-status-color)' : 'var(--closed-status-color)', 'font-size': '8px'}"></i>
+          {{ report.status === 0 ? 'New' : 'Closed' }} </span>
+        <span role="button" id="version" class="fs-6 rounded-pill px-2 py-2 d-inline-block align-bottom lh-1"
+          [ngStyle]="{'background-color': 'var(--version-background)'}" (click)="openReportVersionsDialog()">
+          v.{{report.version}} </span>
+      </h3>
+      <h6 class="fw-bold"> <span class="text-muted fw-light"> Uploaded by </span> {{uploadedBy}} <span
+          class="text-muted fw-light"> at </span> {{convertIsoDateToDdMmYyyy(report.updateDate)}}</h6>
     </div>
-    <div class="abc">
+    <div class="top-button">
       <a class="create-button" (click)="downloadFile(report.id,report.version)">
-        <button> Export</button>
+        <button><i class="fa-solid fa-download me-1"></i> Export</button>
       </a>
-      <a *ngIf="report" [routerLink]="['/reup-report/', report.id ]" class="export-button"  [hidden]="report.status==1">
-        <button> Reup</button>
+      <a *ngIf="report" [routerLink]="['/reup-report/', report.id ]" class="export-button" [hidden]="report.status==1">
+        <button><i class="fa-solid fa-upload me-1"></i> Reup</button>
       </a>
     </div>
   </div>
-  <div *ngIf="report" class="report-details d-flex justify-content-between">
-    <!-- //report infor -->
-
-    <div class="left-item">
-      <h6>Report: {{report.reportName}}</h6>
-      <h6>Term: {{report.termName}}</h6>
-      <h6>Month: {{report.month}}</h6>
-      <h6>Department: {{report.departmentName}}</h6>
-      <h6>Status: {{ report.status === 0 ? 'New' : 'Closed' }}</h6>
+  <div *ngIf="report" id="report-info" class="mb-3 ps-5">
+    <div class="row justify-content-between">
+      <div class="col-3 px-4">
+        <div class="row">
+          <div class="col-5">
+            <p>Department: </p>
+            <p>Term: </p>
+            <p>Month: </p>
+            <p>Due Date: </p>
+          </div>
+          <div class="col-6">
+            <p><b>{{report.departmentName}}</b></p>
+            <p><b>{{report.termName}}</b></p>
+            <p><b>{{report.month}}</b></p>
+            <p><b>{{convertIsoDateToDdMmYyyy(report.reportDureDate)}}</b></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 rounded-5 align-bottom d-flex flex-column justify-content-end">
+        <div class="row">
+          <div class="col-6 text-end">
+            <p>Total Expense:</p>
+            <p>Biggest Expenditure:</p>
+          </div>
+          <div class="col-6 fw-bold" [ngStyle]="{'color': '#0074D9'}">
+            <p>{{totalExpense | number:'1.0-0'}} VND</p>
+            <p>{{biggestExpenditure | number:'1.0-0'}} VND</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="right-item">
-      <h6>Uploaded by: {{uploadedBy}}</h6>
-      <h6>Report Due Date: {{convertIsoDateToDdMmYyyy(report.reportDureDate)}}</h6>
-      <h6>Date: {{convertIsoDateToDdMmYyyy(report.updateDate)}}</h6>
-      <h6 class="underline" (click)="openReportVersionsDialog()">Version: v.{{report.version}}</h6>
-    </div>
-    <!-- //report infor -->
   </div>
-
-  <div class="report-details d-flex justify-content-between">
-    <h6 class="left-item"><b>Total Expense = {{totalExpense | number:'1.0-0'}} VND</b></h6>
-    <h6 class="right-item"><b>Biggest Expenditure = {{biggestExpenditure | number:'1.0-0'}} VND</b></h6>
-  </div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+    [ngStyle]="dataSource.length<=pageSize ? {'border-radius': '20px'} : {}">
     <ng-container matColumnDef="No">
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let element"> {{element.no}} </td>
@@ -79,10 +99,10 @@
     </ng-container>
     <ng-container matColumnDef="Notes">
       <th mat-header-cell *matHeaderCellDef>Notes </th>
-      <td mat-cell *matCellDef="let element">   {{ element.note ? element.note : 'N/A' }}</td>
+      <td mat-cell *matCellDef="let element"> {{ element.note ? element.note : 'N/A' }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
