--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.css
@@ -10,8 +10,6 @@
 .mat-mdc-dialog-title,
 .mat-mdc-dialog-content,
 .mat-mdc-dialog-actions {
-  background-color: #070f2b;
-  color: white;
   margin: 0;
   text-align: center;
 }
@@ -21,17 +19,16 @@
 }
 
 ::ng-deep .mat-mdc-dialog-title {
- 
   font-weight: bolder !important;
   font-size: 20px !important;
   text-transform: uppercase !important;
 }
 
 ::ng-deep .mat-mdc-dialog-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 ::ng-deep .mat-mdc-dialog-actions {
@@ -40,7 +37,6 @@
 }
 
 .note {
-  color: #9db2bf;
   font-weight: lighter !important;
   font-size: 12px;
 }
@@ -53,34 +49,21 @@ button {
   width: 85px;
   height: 40px;
 }
-#cancel-button {
-  background: transparent;
-  color: #9db2bf;
-  border: 1px solid #9db2bf;
-}
 
+#cancel-button {
+  background-color: var(--close-button-background);
+  color: white;
+}
 
 table {
   width: 100%;
   min-height: auto;
-  background-color: #070f2b;
-  border: 1px solid #9290c3;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-radius: 20px;
   overflow: hidden !important;
-  box-shadow: 0px -5px 2px -4px #9290c3;
   flex-shrink: 0;
 }
-th {
-  border-bottom: 1px solid #1b1a55;
-  color: white;
-}
 
-td {
-  border-top: 1px solid #535c91;
-  color: #9290c3;
-}
 .underline {
   text-decoration: underline;
-  cursor:pointer;
+  cursor: pointer;
 }
