--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
@@ -21,12 +21,12 @@
             <td mat-cell *matCellDef="let element"> {{element.uploadedBy}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close id="cancel-button" (click)="closeDialog()">Cancel</button>
+    <button mat-button id="cancel-button" class="border-0" (click)="closeDialog()">Close</button>
 </mat-dialog-actions>
