--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -12,12 +12,11 @@
   <div class="mb-4">
     <div class="searchBar">
       <i class="fa-solid fa-search"></i>
-      <input type="text" [(ngModel)]="searchValue" placeholder="Search by username">
-      <select class="custom-select" [(ngModel)]="selectedRole">
+      <input type="text" [(ngModel)]="searchValue" placeholder="Search by username" (ngModelChange)="onChange()">
+      <select class="custom-select" [(ngModel)]="selectedRole" (ngModelChange)="onChange()">
         <option value="">All Roles</option>
         <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
       </select>
-      <button class="custom-button" (click)="search()">Search</button>
     </div>
   </div>
 
