restyle user-list

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="user-list.component.css">
 <main>
-  <div class="container mb-4">
+
+  <div>
     <div id="page-title">
       <h3><b>User List</b></h3>
       <h6>Users management</h6>
